<resources>
    <string name="app_name">SweetControl</string>
    <string name="company_name">Sweet Belly</string>
    <string name="company_email">lnasegunda@gmail.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Agregar producto</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="main_welcome">Bienvenido</string>

    <!-- Resumen de ventas !-->
    <string name="resume_title">Hoy has vendido</string>
    <string name="cantidad_test">100 MXN</string>
    <string name="resume_history">Historial de actividad:</string>
    <string name="main_message">Balance del día:</string>

    <!-- Agregar producto !-->
    <string name="title_activity_agregar_producto">Agregar producto</string>
    <string name="lbl_nombre">Nombre del producto</string>
    <string name="lbl_descripcion">Descripcion</string>
    <string name="lbl_precio">Precio</string>
    <string name="btn_agregar_prod">Agregar</string>

    <string name="btn_buscar">Leer codigo</string>

</resources>
